infrastructure/configs/arc.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: arc-systems
