infrastructure/configs/postgres.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: data
